Minor change. 1000 fold CV. Submission 2.

--- a/Project5/Intro to Machine Learning.html
+++ b/Project5/Intro to Machine Learning.html
@@ -260,7 +260,7 @@ div#notebook {
 </tr>
 </tbody>
 </table>
-<h3 id="Recursive-feature-elimination">Recursive feature elimination<a class="anchor-link" href="#Recursive-feature-elimination">&#182;</a></h3><p>In this technique, we start with all features and at each step we remove a feature and look at the performance. If the performance goes up, we discard the feature or else we keep it.</p>
+<h3 id="Recursive-feature-elimination">Recursive feature elimination<a class="anchor-link" href="#Recursive-feature-elimination">&#182;</a></h3><p>In this technique, we start with all features and at each step we remove a feature and look at the performance. If the performance goes up, we discard the feature or else we keep it. 1000 fold cross validation is used to evaluate the performance. More information on cross validation is mentioned in the section <strong>Pick and Tune an Algorithm</strong></p>
 <p>Following are the benchmark values when all the features from step 2 are taken.</p>
 <table>
 <thead><tr>
